--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,7 @@ a {
     text-transform: capitalize;
 }
 .nav ul li {
+    position: relative;
     color: var(--secondary-color);
     font-weight: 500;
 }
@@ -54,6 +55,27 @@ a {
     border: 1px solid var(--quinary-color);
     border-radius: 20px;
     padding: 4px 16px;
+}
+.nav ul li:last-child:hover {
+    background-color: var(--primary-color);
+    color: var(--senary);
+    transition: .2s linear;
+    cursor: pointer;
+}
+.nav ul li:not(:last-child):hover::before {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--primary-color);
+    animation: navAnimation .2s linear;
+}
+@keyframes navAnimation {
+    from {
+        width: 0;
+    }
 }
 .main {}
 .footer {
