--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,25 @@
+@import url('./header.css');
+@import url('./mobile.css');
+@import url('./main.css');
+@import url('./container.css');
+@import url('./about.css');
+@import url('./services.css');
+@import url('./portifolio.css');
+@import url('./resource.css');
+@import url('./footer.css');
+@import url('./button.css');
+
+/* Variables */
 :root {
     --primary-color: #1464ff;
     --secondary-color: #35353d;
     --tertiary-color: #e69601;
     --quaternary-color: #00030c;
     --quinary-color: #ccc;
-    --senary: #fff;
+    --white-color: #fff;
+    --black-color: #000;
 }
+/* Reset */
 * {
     margin: 0;
     padding: 0;
@@ -18,139 +32,4 @@ li {
 a {
     text-decoration: none;
     color: currentColor;
-}
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 32px;
-    box-shadow: 1px 1px 4px var(--quinary-color);
-    max-width: 1600px;
-    margin: auto;
-}
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-weight: 700;
-}
-.logo svg {
-    fill: var(--primary-color);
-}
-.nav ul {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    text-transform: capitalize;
-}
-.nav ul li {
-    position: relative;
-    color: var(--secondary-color);
-    font-weight: 500;
-}
-.nav ul li:nth-child(1) {
-    color: var(--primary-color);
-}
-.nav ul li:last-child {
-    border: 1px solid var(--quinary-color);
-    border-radius: 20px;
-    padding: 4px 16px;
-}
-.nav ul li:last-child:hover {
-    background-color: var(--primary-color);
-    color: var(--senary);
-    transition: .2s linear;
-    cursor: pointer;
-}
-.nav ul li:not(:last-child):hover::before {
-    content: "";
-    position: absolute;
-    bottom: -4px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: var(--primary-color);
-    animation: navAnimation .2s linear;
-}
-@keyframes navAnimation {
-    from {
-        width: 0;
-    }
-}
-.main {}
-.footer {
-    display: flex;
-    flex-direction: column;
-    padding: 32px;
-    max-width: 1600px;
-    margin: auto;
-    background-color: var(--quaternary-color);
-    color: var(--senary);
-}
-.footer .notify {
-    padding: 32px;
-    display: flex;
-    align-items: start;
-    justify-content: space-between;
-}
-.footer .notify .form {
-    display: flex;
-    flex-direction: column;
-}
-.footer .notify .form label {
-    text-transform: capitalize;
-}
-.footer .notify .form input {
-    padding: 4px 8px;
-    border: none;
-    background-color: transparent;
-    width: 250px;
-    border-bottom: 1px solid var(--quinary-color);
-}
-.footer .info {
-    padding: 32px;
-    display: flex;
-    align-items: end;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border-top: 1px solid var(--secondary-color);
-    border-bottom: 1px solid var(--secondary-color);
-}
-.footer .info .social {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-.footer .info .social svg {
-    fill: var(--quinary-color);
-}
-.footer .info .message p {
-    max-width: 40ch;
-    color: var(--quinary-color);;
-}
-.footer .copy {
-    padding: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.footer .copy span {
-    display: flex;
-    gap: 20px;
-}
-@media (max-width: 800px) {
-    .header {
-        flex-direction: column;
-    }
-    .logo {
-        margin-bottom: 20px;
-    }
-    .footer .notify,
-    .footer .info,
-    .footer .info .logo,
-    .footer .copy {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
 }
