i've finished the about and services section

--- a/styles/container.css
+++ b/styles/container.css
@@ -8,7 +8,8 @@
     color: var(--quaternary-color);
     font-size: 2rem;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin-top: 32px;
+    margin-bottom: 32px;
 }
 .container .title span {
     color: var(--quinary-color);
