--- a/styles/services.css
+++ b/styles/services.css
@@ -2,12 +2,14 @@
     font-size: 2rem;
     font-weight: 500;
     text-align: center;
-    margin-bottom: 32px;
+    color: var(--secondary-color);
+    text-transform: capitalize;
 }
 .services .text {
     text-align: center;
     max-width: 48ch;
     margin-bottom: 32px;
+    color: var(--secondary-color);
 }
 .serviceGrid {
     display: grid;
@@ -21,5 +23,9 @@
     gap: 4px;
     border-radius: 8px;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #f0f0f0;
+}
+.serviceItem:hover {
+    background-color: #f0f0f0;
+    transition: .2s linear;
 }
