--- a/styles/services.css
+++ b/styles/services.css
@@ -12,8 +12,9 @@
     color: var(--secondary-color);
 }
 .serviceGrid {
+    padding: 32px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 240px);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     max-width: 1000px;
 }
